--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
- <!-- 导航 -->
-<div id="navigation" class="container">
+
+	<div id="navigation" class="container">
  <nav class="navbar navbar-default navbar-inverse">
     <div class="navbar-header">
-        <a class="navbar-brand active" href="add_item" ><span class="glyphicon glyphicon-th-list "  ></span>添加事项</a>
+    	 <a class="navbar-brand " href="" >To-do-list</a>
+        <a class="navbar-brand " href="add_item" ><span class="glyphicon glyphicon-th-list "  ></span>添加事项</a>
         <a class="navbar-brand" href="list_item" ><span class="glyphicon glyphicon-th-list"></span>所有事项</a>
         <a class="navbar-brand" href="uncomplete_item" ><span class="glyphicon glyphicon-th-list"></span>未完成事项</a>
         <a class="navbar-brand" href="complete_item" ><span class="glyphicon glyphicon-th-list"></span>已完成事项</a>
@@ -22,8 +23,10 @@
  </nav>
 </div>
 
+
 {% block content %}
 {% endblock %}
 
 </body>
 </html>
+
