--- a/todo_list/templates/add_item.html
+++ b/todo_list/templates/add_item.html
@@ -2,10 +2,54 @@
 {% block title %}添加待办事项{% endblock %}
 
 {% block content %}
+<div class="container " >
+    <div class="row" >
+        <div class="col-md-4 col-md-offset-4">
+                <div class="panel panel-default">
+                  <div class="panel-heading heading-size" align="center">To-do-list</div>
+                  <div class="panel-body">
+                    <form  method="post" id="submit_order">
+                     {{ form.csrf_token }}
+                      <div class="form-group" >
+                            {{ form.title.label }} <br>
+                            {{ form.title() }}
+                      </div>
+                      <div class="form-group">
+                            {{ form.description.label }} <br>
+            				{{ form.description() }}
+                      </div>
+                      <div class="form-group">
+                      		{{ form.deadline.label }} <br>
+                            {{ form.deadline(class='datepicker') }}
+                      </div>
+                      <div class="form-group">
+                      		{{ form.tag.label }} <br>
+                            {{ form.tag() }}
+                      </div>
+                      <div class="form-group">
+                      		{{ form.submit.label }} <br>
+                            {{ form.submit() }}
+                      </div>
+                      
+                      
+                      
+                    </form>
+                   
+                  </div>
+                </div>
+            
+        </div>
+    </div>
+    
+</div>
+
+{% endblock %}
+
 <div class="container">
+
         <form action="" method="post" >
         <!-- 用来实现在配置中激活的csrf保护 -->
-        {{ form.csrf_token }}
+        
 
         <p>
             {{ form.title.label }}<br>
@@ -21,4 +65,3 @@
         <p>{{ form.submit() }}</p>
     </form>
 </div>
-{% endblock %}
