--- a/todo_list/templates/list_item.html
+++ b/todo_list/templates/list_item.html
@@ -3,9 +3,6 @@
 
 {% block content %}
 
-
-
-
 <!-- todo列表 -->
 <div id="todo-list" class="container">
  <table class="table table-striped">
@@ -14,27 +11,45 @@
         <td>标题</td>
         <td>内容</td>
         <td>创建时间</td>
+        <td>最后期限</td>
+        <td>完成时间</td>
         <td>完成情况</td>
-        <td>删除</td>
-        <td>完成</td>
+        <td>操作一</td>
+        <td>操作二</td>
+        <td>操作三</td>
+        
     </th>
     {% for todo in todo_list %}
-    <tr>
-        <td>{{ loop.index0 }}</td>
+
+    <tr {% if todo.status == "Uncomplete" %} class="danger" 
+    {% else %} class="info" {% endif %}>
+        <td>{{ loop.index0 + 1}}</td>
         <td>{{ todo.title }}</td>
         <td>{{ todo.description }}</td>
         <td>{{ todo.date.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+        <td>{{ todo.deadline.strftime("%Y-%m-%d") }}</td>
+        {% if todo.status == "Uncomplete" %}
+            <td ></td>
+        {%else%}
+            <td>{{ todo.complete_time.strftime("%Y-%m-%d %H:%M:%S") }}</td>
+        {% endif %}
         {% if todo.status == "Uncomplete" %}
             <td class="text-danger">未完成</td>
         {% elif todo.status == "Complete" %}
             <td >已完成</td>
         {% endif %}
-        <td><a href="list_item/delete_item?item_id={{todo.id}}" onClick="return confirm('sure?')"><span class="glyphicon glyphicon-remove"></span></a></td>
+
         {% if todo.status == "Uncomplete" %}
-        <td><a href="list_item/update_complete_status?item_id={{todo.id}}" onClick="return confirm('sure?')"><span class="glyphicon glyphicon-ok"></span></a></td>
+        <td><a class='btn btn-primary' href="list_item/update_complete_status?item_id={{todo.id}}" onClick="return confirm('sure?')">完成</a></td>
         {% else %}
         <td></td>
         {% endif %}
+        <td><a class='btn btn-primary ' href="list_item/modify_item?item_id={{todo.id}}" >修改</a></td>
+        
+        <td><a class='btn btn-danger' href="list_item/delete_item?item_id={{todo.id}}" onClick="return confirm('sure?')">删除</a></td>
+        deadline
+        
+        
     </tr>
    {% endfor %}
  </table>
