--- a/todo_list/templates/uncomplete_item.html
+++ b/todo_list/templates/uncomplete_item.html
@@ -7,7 +7,6 @@
 <div id="todo-list" class="container">
  <table class="table table-striped">
     <th>
-        
         <td>title</td>
         <td>内容</td>
         <td>创建时间</td>
@@ -16,13 +15,11 @@
         <td>完成</td>
     </th>
     {% for todo in uncomplete_items %}
-    <tr>
-        <td>{{ loop.index0 }}</td>
-        
-        
+    <tr class="danger">
+        <td>{{ loop.index0 + 1 }}</td>
         <td>{{ todo.title }}</td>
         <td>{{ todo.description }}</td>
-        <td>{{ todo.date }}</td>
+        <td>{{ todo.date.strftime("%Y-%m-%d %H:%M:%S") }}</td>
         {% if todo.status == "Uncomplete" %}
             <td>未完成</td>
         {% elif todo.status == "Complete" %}
