--- a/todo_list/templates/base.html
+++ b/todo_list/templates/base.html
@@ -14,11 +14,12 @@
 	<div id="navigation" class="container">
  <nav class="navbar navbar-default navbar-inverse">
     <div class="navbar-header">
-    	 <a class="navbar-brand " href="" >To-do-list</a>
-        <a class="navbar-brand " href="add_item" ><span class="glyphicon glyphicon-th-list "  ></span>添加事项</a>
-        <a class="navbar-brand" href="list_item" ><span class="glyphicon glyphicon-th-list"></span>所有事项</a>
-        <a class="navbar-brand" href="uncomplete_item" ><span class="glyphicon glyphicon-th-list"></span>未完成事项</a>
-        <a class="navbar-brand" href="complete_item" ><span class="glyphicon glyphicon-th-list"></span>已完成事项</a>
+    	 <a class="navbar-brand " href="/" >To-do-list</a>
+        <a class="navbar-brand " href="/add_item" ><span class="glyphicon glyphicon-th-list "  ></span>Add item</a>
+        <a class="navbar-brand" href="/list_item" ><span class="glyphicon glyphicon-th-list"></span>All items</a>
+        <a class="navbar-brand" href="/uncomplete_item" ><span class="glyphicon glyphicon-th-list"></span>UnCompleted item</a>
+        <a class="navbar-brand" href="/complete_item" ><span class="glyphicon glyphicon-th-list"></span>Completed item</a>
+        
    </div>
  </nav>
 </div>
