--- a/todo_list/templates/add_item.html
+++ b/todo_list/templates/add_item.html
@@ -6,7 +6,7 @@
     <div class="row" >
         <div class="col-md-4 col-md-offset-4">
                 <div class="panel panel-default">
-                  <div class="panel-heading heading-size" align="center">To-do-list</div>
+                  <div class="panel-heading heading-size" align="center">Add item</div>
                   <div class="panel-body">
                     <form  method="post" id="submit_order">
                      {{ form.csrf_token }}
@@ -44,24 +44,3 @@
 </div>
 
 {% endblock %}
-
-<div class="container">
-
-        <form action="" method="post" >
-        <!-- 用来实现在配置中激活的csrf保护 -->
-        
-
-        <p>
-            {{ form.title.label }}<br>
-            {{ form.title() }}
-        </p>
-        <p>
-            {{ form.description.label }}<br>
-            {{ form.description() }}
-        </p>
-        <p>
-            {{ form.tag() }}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-</div>
